--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Наборные ранги</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,36 +11,57 @@
 <div class="container">
   <h1>Наборные ранги</h1>
 
-  <div class="info">
-    ✔ Покупной ранг не имеет обязательств<br>
-    ✔ Без отчетов и обязательного онлайна<br>
-    ⭐ Любой ранг можно докупить без переплаты
-  </div>
-
   <div class="cards">
-    <div class="card">
-      <div class="icon">⚙️</div>
-      <div class="title">Супер Админ</div>
-      <a href="https://t.me/ТВОЙ_БОТ" class="btn">Выбрать</a>
-    </div>
 
     <div class="card">
-      <div class="icon">🐧</div>
       <div class="title">Root</div>
-      <a href="https://t.me/ТВОЙ_БОТ" class="btn">Выбрать</a>
+      <div class="icon">🐧</div>
+      <div class="price">2500 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=root">Купить</a>
     </div>
 
     <div class="card">
-      <div class="icon">💻</div>
-      <div class="title">Sudo Root</div>
-      <a href="https://t.me/ТВОЙ_БОТ" class="btn">Выбрать</a>
-    </div>
-
-    <div class="card">
-      <div class="icon">👑</div>
       <div class="title">Главный куратор</div>
-      <a href="https://t.me/ТВОЙ_БОТ" class="btn">Выбрать</a>
+      <div class="icon">👑</div>
+      <div class="price">2200 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=main_curator">Купить</a>
     </div>
+
+    <div class="card">
+      <div class="title">Sudo Root</div>
+      <div class="icon">💻</div>
+      <div class="price">1800 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=sudo_root">Купить</a>
+    </div>
+
+    <div class="card">
+      <div class="title">Супер Админ</div>
+      <div class="icon">⚙️</div>
+      <div class="price">1200 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=super_admin">Купить</a>
+    </div>
+
+    <div class="card">
+      <div class="title">Старший куратор</div>
+      <div class="icon">👤</div>
+      <div class="price">900 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=senior_curator">Купить</a>
+    </div>
+
+    <div class="card">
+      <div class="title">Главный админ</div>
+      <div class="icon">⭐</div>
+      <div class="price">600 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=head_admin">Купить</a>
+    </div>
+
+    <div class="card">
+      <div class="title">Старший админ</div>
+      <div class="icon">⭐</div>
+      <div class="price">350 ₽</div>
+      <a class="btn" href="https://t.me/ТВОЙ_БОТ?start=senior_admin">Купить</a>
+    </div>
+
   </div>
 </div>
 
